--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "jsonwebtoken": "^8.2.0",
     "morgan": "~1.9.0",
     "mysql2": "^1.5.2",
+    "nodemailer": "^4.6.5",
     "pug": "2.0.0-beta11",
     "sequelize": "^4.36.1",
     "serve-favicon": "~2.4.5"
