--- a/package.json
+++ b/package.json
@@ -9,15 +9,18 @@
   "dependencies": {
     "bcrypt": "^1.0.3",
     "body-parser": "~1.18.2",
+    "caniuse-lite": "^1.0.30000851",
     "continuation-local-storage": "^3.2.1",
     "cookie-parser": "~1.4.3",
     "debug": "~2.6.9",
+    "errors": "^0.3.0",
     "express": "^4.16.3",
     "jsonwebtoken": "^8.2.0",
     "morgan": "~1.9.0",
     "mysql2": "^1.5.2",
     "nodemailer": "^4.6.5",
     "pug": "2.0.0-beta11",
+    "semantic": "0.0.1",
     "sequelize": "^4.36.1",
     "serve-favicon": "~2.4.5"
   }
