--- a/config/config.json
+++ b/config/config.json
@@ -20,5 +20,23 @@
     "database": "prod_mandareen",
     "host": "127.0.0.1",
     "dialect": "mysql"
+  },
+  "smtp": {
+    "port": 465,
+    "host": "smtp.gmail.com",
+    "secure": true,
+    "auth": {
+      "user": "contact.mandareen@gmail.com",
+      "pass": "20ManDa1reEn8"
+    },
+    "tls": {
+      "rejectUnauthorized": false
+    }
+  },
+  "mails": {
+    "send": true,
+    "staff": [
+      "Gmail Mandareen <contact.mandareen@gmail.com>"
+    ]
   }
 }
