--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "pug": "2.0.0-beta11",
     "semantic": "0.0.1",
     "sequelize": "^4.36.1",
-    "serve-favicon": "~2.4.5"
+    "serve-favicon": "~2.4.5",
+    "twig": "^1.12.0"
   }
 }
