--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "win_debug": "SET DEBUG=app* && nodemon app.js"
   },
   "dependencies": {
-    "bcrypt": "^1.0.3",
+    "bcrypt": "^3.0.2",
     "body-parser": "~1.18.2",
     "caniuse-lite": "^1.0.30000851",
     "continuation-local-storage": "^3.2.1",
@@ -15,6 +15,7 @@
     "debug": "~2.6.9",
     "errors": "^0.3.0",
     "express": "^4.16.3",
+    "glob": "^7.1.3",
     "jsonwebtoken": "^8.2.0",
     "morgan": "~1.9.0",
     "mysql2": "^1.5.2",
