--- a/package.json
+++ b/package.json
@@ -16,10 +16,12 @@
     "errors": "^0.3.0",
     "express": "^4.16.3",
     "glob": "^7.1.3",
+    "https-proxy-agent": "^2.2.1",
     "jsonwebtoken": "^8.2.0",
     "morgan": "~1.9.0",
     "mysql2": "^1.5.2",
     "nodemailer": "^4.6.5",
+    "passport": "^0.4.0",
     "pug": "2.0.0-beta11",
     "semantic": "0.0.1",
     "sequelize": "^4.36.1",
