--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "morgan": "~1.9.0",
     "mysql2": "^1.5.2",
     "nodemailer": "^4.6.5",
+    "npm": "^6.5.0",
     "pug": "2.0.0-beta11",
     "semantic": "0.0.1",
     "sequelize": "^4.36.1",
