--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "jsonwebtoken": "^8.2.0",
     "morgan": "~1.9.0",
     "mysql2": "^1.5.2",
+    "node-schedule": "^1.3.1",
     "nodemailer": "^4.6.5",
     "npm": "^6.5.0",
     "passport": "^0.4.0",
